<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <EditText
        android:id="@+id/custom_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_custom_message"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/custom_message_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@id/custom_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/custom_message_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/post_from_subreddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/tv_post_from_subreddit"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_subreddit_base_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reddit_base_url"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/post_from_subreddit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/te_custom_subreddit"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <EditText
        android:id="@+id/te_custom_subreddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_subreddit"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_subreddit_base_url"
        app:layout_constraintStart_toEndOf="@id/tv_subreddit_base_url"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/reddit_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/reddit"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/send_from_subreddit"
        app:layout_constraintBottom_toBottomOf="@id/send_from_subreddit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_from_subreddit"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/send_from_subreddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/redditColor"
        android:textColor="@color/colorAccent"
        android:text="@string/send"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subreddit_base_url"
        app:layout_constraintStart_toEndOf="@id/reddit_logo"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>